[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jsonrpclib"]

[project]
name = "jsonrpclib-pelix"
version = "0.4.3.4"
authors = [
  { name="Thomas Calmant", email="thomas.calmant+github@gmail.com" },
  { name="Josh Marshall" }
]
description = """\
  JSON-RPC v2.0 client and server for Python 2.7 and Python 3.6+ \
  usable with Pelix/iPOPO remote services.\
  """
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/tcalmant/jsonrpclib/"
Issues = "https://github.com/tcalmant/jsonrpclib/issues"
Documentation = "https://jsonrpclib-pelix.readthedocs.io/"
Source = "https://github.com/tcalmant/jsonrpclib/"

[tool.black]
line-length = 80
